masih ada bug di halaman aboutus sama promo. pas popup, backgroundnya gak ikut ngeblurr. dan kalo ngescroll gak ilang navbarnyaa

--- a/styles.css
+++ b/styles.css
@@ -624,15 +624,18 @@ body {
   align-items: center;
   font-size: 30px;
   margin-bottom: 30px;
+  background-color: #ffde1a;
   color: #ff7400;
   font-weight: bold;
   text-shadow: 0 0 1px #ff7400, 0 0 2px #ff7400;
+  box-shadow: 0 0 5px 0.1px;
 }
 
 .container-basket {
   display: flex;
   justify-content: space-between;
   max-width: 1440px;
+  padding: 20px;
 }
 .items-basket {
   flex: 1;
@@ -642,18 +645,67 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
-  color: #f79749;
+  margin-bottom: 0px;
+  z-index: 10;
+  color: white;
   font-weight: bold;
   text-shadow: 0 0 1px #f79749, 0 0 2px #f79749;
+  background-color: #f4ae36;
+  padding: 20px;
 }
+
+.price-input{
+  background-color: rgba(170, 169, 169, 0.245);
+  font-size: larger;
+  padding: 10px;
+  margin: 20px 0px;
+  border: 0;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  z-index: 10;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.price-input:focus{
+  outline: none;
+}
+
 .basket {
   flex: 1;
-  margin-left: 200px;
+  padding: 60px;
+  padding-right: 0px;
+  padding-top: 0;
+  max-height: 800px;
 }
+.basket ul {
+  margin-left: 20px;
+}
+
+.voucher-tab input{
+  border: 0;
+  background-color: rgba(170, 169, 169, 0.245);
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  padding-left: 10px;
+}
+.voucher-tab input:focus{
+  outline: none;
+}
+.voucher-tab button{
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 .item-list-basket {
   list-style-type: none;
-  padding: 0;
+  padding: 20px;
+  padding-top: 20px;
+  background-color: #e9e9e945;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
 }
 .item-basket {
   margin-bottom: 10px;
@@ -673,8 +725,17 @@ body {
   align-items: center;
 }
 .quantity-input {
+  padding-left: 10px;
   width: 50px;
   margin-right: 10px;
+  font-size: medium;
+  border-radius: 5px;
+  border:0;
+  box-shadow: 0px 0px 3px 0.1px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 .price {
   font-weight: bold;
@@ -684,17 +745,27 @@ body {
 }
 .add-button {
   background-color: #f4ae36;
+  margin-left: -20px;
+  margin-bottom: -24px;
   color: white;
   border: none;
-  padding: 6px 12px;
+  padding: 7px 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 12px;
   cursor: pointer;
+  transition: .3s;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .add-button:hover {
   background-color: #ff7300;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
 }
 .remove-button {
   background-color: #f44336;
@@ -725,7 +796,7 @@ body {
   background-color: #45a049;
 }
 .voucher-tab {
-  margin-top: 20px;
+  margin: 20px 0;
 }
 .voucher-button {
   background-color: #ff8800;
@@ -1035,13 +1106,31 @@ body {
 }
 
 .btn {
+  font-size: larger;
+  font-weight: bolder;
   border: none;
   outline: none;
   padding: 12px 16px;
-  margin-top: -200px;
+  margin-top: -300px;
   background-color: white;
   cursor: pointer;
 }
+.btn :before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 5%;
+  width: 0;
+  height: 2px;
+  background: rgb(0, 0, 0);
+  transition: 0.3s;
+}
+
+.btn :hover::before {
+  width: 90%;
+  transition: 0.3s;
+}
+
 
 /* About Us Page */
 .about-konten {
